2008-06-13 Tomas Frydrych  <tf@o-hand.com>

	* src/home/hd-home.c:
	Fixed layout view when a view is removed.

2008-06-13 Tomas Frydrych  <tf@o-hand.com>

	* src/mb/Makefile.am:
	* src/mb/hd-dialog.c:
	* src/mb/hd-dialog.h:
	* src/mb/hd-wm.c:
	Custom MBWMClientDialog subclass to handle hildon peculiarities.

2008-06-12 Tomas Frydrych  <tf@o-hand.com>

	* src/home/Makefile.am:
	* src/home/hd-home.c:
	* src/home/hd-home.h:
	* src/home/hd-switcher.c:
	* src/home/hd-edit-menu.h:
	* src/home/hd-edit-menu.c:
	* src/mb/hd-comp-mgr.c:
	* src/mb/hd-comp-mgr.h:
	Home edit menu.

2008-06-12 Tomas Frydrych  <tf@o-hand.com>

	* src/mb/hd-app.c:
	(hd_app_close_followers):
	Hooked into  mb_wm_client_deliver_delete() mechanism.

2008-06-12 Tomas Frydrych  <tf@o-hand.com>

	* src/main.c:
	* src/mb/Makefile.am:
	* src/mb/hd-atoms.c:
	* src/mb/hd-atoms.h:
	* src/mb/hd-wm.c:
	* src/mb/hd-wm.h:
	Custom HdAppMenu subclass of MBWMClientDialog to handle Hildon
	application menu windows.

2008-06-12 Tomas Frydrych  <tf@o-hand.com>

	* src/mb/Makefile.am:
	* src/mb/hd-atoms.c:
	* src/mb/hd-atoms.h:
	* src/mb/hd-wm.c:
	* src/mb/hd-note.h:
	* src/mb/hd-note.c:
	Custom HdNote subclass of MBWMClientNote to handle Hildon
	notifications (banners, infos and confirmations).

2008-06-12 Tomas Frydrych  <tf@o-hand.com>

	* src/hd-applet-test.c:
	Added couple of sliders to the sample applet.

2008-06-12 Tomas Frydrych  <tf@o-hand.com>

	* src/mb/hd-app.c:
	* src/mb/hd-app.h:
	* src/mb/hd-theme.c:
	More of Hildon stackable window back button code.

2008-06-11  Tomas Frydrych  <tf@o-hand.com>

	* src/mb/hd-theme.c:
	Skeleton for handling presses on Hildon stackable window back
	button.

2008-06-11  Tomas Frydrych  <tf@o-hand.com>

	* src/mb/hd-app.c:
	* src/mb/hd-app.h:
	* src/mb/hd-theme.c:
	Fixed handling of hildon stackable windows so that legacy
	applications continue to work as they used to.

	* src/mb/hd-atoms.c:
	* src/mb/hd-atoms.h:
	Added _HILDON_STACKABLE_WINDOW atom.
